<resources>
    <string name="app_name">VIllage Programmer App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_exit">Exit App</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_github">On GitHub</string>
    <string name="menu_youtube">On YouTube</string>
    <string name="menu_twitter">On Twitter</string>
    <string name="name_app">Village Programmer Official App</string>
    <string name="website">https://villageprogrammer.blogspot.com</string>
    <string name="website2">www.villageprogrammer.tech</string>
    <string name="menu_about_us">About Us</string>
    <string name="back">Back</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email...</string>
    <string name="prompt_password">Password...</string>
    <string name="prompt_password_confirm">Confirm Password...</string>


</resources>
